fix spacing on yx1 on mobile

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -293,7 +293,7 @@
         justify-content: space-between;
     }
 
-    @include tablet{
+    @include mid-tablet{
         width: 69.375rem;
     }
 
