--- a/src/app/product/[productName]/page.module.scss
+++ b/src/app/product/[productName]/page.module.scss
@@ -1,2 +1,6 @@
 @use "../../../styles/mixin" as *;
 @use "../../../styles/variables" as *;
+
+.product{
+    
+}
